# amaris_lib

./: .gitignore  CMakeLists.txt
amaris/: CMakeLists.txt
amaris/include/: amaris.h  application.h  communication.h  console.h  console_win.h  file_handler.h  logger.h  master_console.h  network.h  parser.h  process_handler.h  process_handler_win.h  publisher.h  serial_port_win.h  slave_console.h  socket_win.h
amaris/src/: application.cpp  communication.cpp  console.cpp  file_handler.cpp  logger.cpp  master_console.cpp  network.cpp  process_handler.cpp  process_handler_win.cpp  publisher.cpp  serial_port_win.cpp  slave_console.cpp  socket_win.cpp
com_nucleo_app/: CMakeLists.txt  com_nucleo.cpp  com_nucleo.h  main.cpp
slave_prompt/: CMakeLists.txt  slave_prompt.cpp  slave_prompt.h
test_executable/: CMakeLists.txt  main.cpp  test_application.cpp  test_application.h
